--- a/src/components/product-displays/styles/productCard.module.css
+++ b/src/components/product-displays/styles/productCard.module.css
@@ -1,5 +1,5 @@
 .imgFrame {
-  height: 300px;
+  height: 250px;
   padding: 10px;
 
   display: flex;
@@ -11,10 +11,21 @@
   box-shadow: inset 0 0 10px grey;
 }
 
+.imgFrameHome {
+  composes: imgFrame;
+  height: 300px;
+}
+
 .imgFrame img {
   max-height: 225px;
 }
 
 .cardBody {
   padding-top: 5px;
+}
+
+@media (min-width: 700px) {
+  .imgFrame {
+    height: 300px;
+  }
 }
