--- a/src/index.css
+++ b/src/index.css
@@ -65,9 +65,11 @@ input {
 
 main {
   flex: 1;
+  width: min(1300px, 100%);
+  padding: 10px min(80px, 9vw) 40px;
+  margin: auto;
   display: flex;
   flex-direction: column;
-  padding: 40px min(80px, 9vw);
 }
 
 img {
