--- a/src/pages/Home/styles/home.module.css
+++ b/src/pages/Home/styles/home.module.css
@@ -61,7 +61,6 @@
 /* ---------------------------------------- */
 
 .articles {
-  width: min(1200px, 100%);
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   row-gap: 40px;
@@ -88,8 +87,6 @@
   }
 
   .hero {
-    width: min(1200px, 100%);
-
     flex-direction: row;
     align-items: stretch;
     gap: 10px;
